Hide overflow on body to prevent scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,8 @@ html {
 body {
   margin: 0px;
   padding: 0px;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
